compiler/src/test/resources/amyc/nameAnalyzer/failing/UndefinedType.amy
module UndefinedType
  fn foo(): SomeType = { 42 }
end UndefinedType
